# sensor-iot

./: .gitignore  README.md  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/parissakalaee/sensorIoT/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/parissakalaee/sensorIoT/: MainActivity.kt  SensorIotApplication.kt
app/src/main/java/com/parissakalaee/sensorIoT/data/: MqttRepository.kt  SensorReading.kt  SensorRepository.kt
app/src/main/java/com/parissakalaee/sensorIoT/di/: AppModule.kt
app/src/main/java/com/parissakalaee/sensorIoT/ui/components/: SensorCard.kt
app/src/main/java/com/parissakalaee/sensorIoT/ui/screens/: DashboardScreen.kt
app/src/main/java/com/parissakalaee/sensorIoT/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/parissakalaee/sensorIoT/viewmodels/: DashboardViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/parissakalaee/sensorIoT/: ExampleUnitTest.kt
firmware/: .gitignore  README.md  credentials.h.example  esp32_sensor.ino  platformio.ini
firmware-espidf/: .gitignore  CMakeLists.txt
firmware-espidf/main/: CMakeLists.txt  README.md  credentials.h.example  main.cpp  mqtt_wrapper.cpp  mqtt_wrapper.h  sensor_reader.cpp  sensor_reader.h  wifi_manager.cpp  wifi_manager.h
firmware/src/: config.h  main.cpp  mqtt_client.cpp  mqtt_client.h  sensor_reader.cpp  sensor_reader.h  wifi_manager.cpp  wifi_manager.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
